aws-ec2-ssh-instance/security_group.tf
//create a security group and open port 80 and 22.

resource "aws_security_group" "sg" {
    name = "security_group"
    description = "security group that allows ssh and http"
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
      "Name" = "${var.project_name}-sg"
    }
}
